# BbRestExamples

./: 0. DevCon.ipynb  0DevCon.py  1. SysAdmin.ipynb  1SysAdmins.py  2. Developer.ipynb  2Developers.py  3. Data Professional.ipynb  3DataPros.py  DevCon.py  README.md  ThreeLeggedExamples.ipynb  pyproject.toml
